# advent_of_code

./: .gitignore  Aoc2019.ml  Aoc_utils.ml  aoc2019.install  day12.ml  day13.ml  dune  machine.ml  runaoc2019.ml
1/: day1.ml
10/: day10.ml
11/: day11.ml
2018/: CMakeLists.txt  Makefile
2018/src/: aoc_2018.cpp
2018/src/day1/: day1.cpp  day1.h
2018/src/day2/: day2.cpp  day2.h
2018/src/day3/: day3.cpp  day3.h
2018/src/day4/: day4.cpp  day4.h  test_input_sorted.txt
2018/src/day5/: day5.cpp  day5.h  input.txt
2018/src/utils/: aoc_utils.cpp  aoc_utils.h
2019/: Aoc2019.ml  dune
2019/1/: day1.ml
2019/10/: day10.ml
2019/2/: day2.ml
2019/3/: day3.ml
2019/4/: day4.ml
2019/6/: day6.ml
2019/9/: day9.ml
3/: day3.ml
5/: day5.ml
7/: day7.ml
9/: day9.ml
