(library
  (name aoc2019)
  (public_name aoc2019)
   (modules day1 day2 day3 day4 day5 day6 day7 day9 day10 day11 day12 day13 machine aoc_utils)
  ;; (modes native)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_compare ppx_sexp_conv ppx_hash))
  (libraries core str zarith))

(executable
 (name runaoc2019)
 (public_name runaoc2019)
 (package aoc2019)
 (modules runaoc2019)
 (libraries aoc2019))

(copy_files# 1/*.ml*)
(copy_files# 2/*.ml*)
(copy_files# 3/*.ml*)
(copy_files# 4/*.ml*)
(copy_files# 5/*.ml*)
(copy_files# 6/*.ml*)
(copy_files# 7/*.ml*)
(copy_files# 9/*.ml*)
(copy_files# 10/*.ml*)
(copy_files# 11/*.ml*)
