(executable
  (name aoc2019)
  (public_name aoc2019)
  (package aoc2019)
  (modes native)
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson))
  (libraries core str))

(copy_files# 1/*.ml*)
(copy_files# 2/*.ml*)
(copy_files# 3/*.ml*)
(copy_files# 4/*.ml*)
(copy_files# 5/*.ml*)
(copy_files# 6/*.ml*)
(copy_files# 7/*.ml*)